# luna-chess

./: Cargo.toml
.cargo/: config.toml
benches/: alloc.rs  perft.rs
bevy_chess/: Cargo.toml
bevy_chess/src/: board.rs  main.rs  pieces.rs
src/: bitboard.rs  board.rs  build.rs  castle_rights.rs  chess_move.rs  color.rs  file.rs  lib.rs  magic.rs  main.rs  movegen.rs  piece_moves.rs  pieces.rs  rank.rs  square.rs
src/gen_files/: attacks.rs  between.rs  chessboard.rs  king.rs  knight.rs  lines.rs  magics.rs  mod.rs  pawn.rs  rays.rs
src/gen_moves/: attacks.rs  magics.rs  mod.rs  rays.rs
