[package]
name = "luna-chess"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[dependencies]
anyhow = "1.0.95"
rand = "0.9.0"

[build-dependencies]
anyhow = "1.0.95"
rand = { version = "0.9.0", features = ["small_rng"] }


[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false

[profile.dev]
opt-level = 3
debug = true

[profile.test]
opt-level = 3
