[package]
name = "luna-chess"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[dependencies]
anyhow = "1.0.95"
rand = "0.9.0"

[build-dependencies]
anyhow = "1.0.95"
rand = { version = "0.9.0", features = ["small_rng"] }

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 3
debug = true

[profile.test]
opt-level = 3

[profile.bench]
opt-level = 3
debug = true
strip = false


[dev-dependencies]
criterion = "0.5.1"
divan = "0.1.17"

[[bench]]
name = "perft"
harness = false

[[bench]]
name = "alloc"
harness = false

[lints.clippy]
large_const_arrays = "allow"
